# emu

./: .gitignore  .gitmodules  CMakeLists.txt  Emu.pro  LICENSE  README.md  array2D.hpp  emu.pro  frameprocessor.cpp  frameprocessor.h  griddrawer.cpp  griddrawer.h  main.cpp  mainwindow.cpp  matrix.h  rgb.h  rpc.cpp  rpc.h  timer.cpp
app/: CMakeLists.txt  main.cpp  resources.qrc  schonherzitem.cpp  schonherzitem.hpp
app/qml/: main.qml
emu/: emu.pro
src/: gridwidget.cpp  gridwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  matrixemulator.cpp  matrixemulator.h  matrixemulator.ui  resource.qrc  schcoords.h  schwidget.cpp  schwidget.h
